# swenc-proxy

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
backend/: Cargo.toml  keys.txt
backend/src/: main.rs
cli/: README.md  download.py  mitmproxy-script.py  requirements.txt
crypto/: Cargo.toml
crypto/src/: lib.rs
frontend/: Cargo.toml
frontend/public/: index.html  prison.js  style.css  sw.js  utils.js  worker.js
frontend/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs
