[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "tokio"] }
axum-extra = "0.10.1"
futures-util = { version = "0.3.31", features = ["sink"] }
http = "1.3.1"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.17", features = [
    "stream",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
tower-http = { version = "0.6.4", features = ["fs"] }
shared = { path = "../shared" }
sha256 = "1.6.0"
rmp-serde = "1.3.0"
