[package]
name = "wasm-dl"
version = "0.1.0"
authors = ["JorianWoltjer <26067369+JorianWoltjer@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.74", features = [
    "ReadableStream",
    "ReadableStreamDefaultController",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.47"
tokio = { version = "1.41.1", features = ["io-util"] }
argon2 = "0.5.3"
aes-gcm = "0.10.3"
getrandom = { version = "0.2.15", features = ["js"] }
futures = "0.3.31"
tokio-util = { version = "0.7.12", features = ["io"] }
wasm-streams = "0.4.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
