[package]
name = "frontend"
version = "0.1.0"
authors = ["JorianWoltjer <26067369+JorianWoltjer@users.noreply.github.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.74", features = [
    "ReadableStream",
    "ReadableStreamDefaultController",
] }
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.47"
tokio = { version = "1.41.1", features = ["io-util", "rt"] }
tokio-util = { version = "0.7.12", features = ["codec", "io"] }
futures = "0.3.31"
wasm-streams = "0.4.2"
crypto = { path = "../crypto" }
